itemDp form combo boxes population by API

--- a/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
+++ b/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
@@ -93,6 +93,7 @@
     <Compile Include="HealthCenter.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemPo.cs" />
+    <Compile Include="ItemPoDpDto.cs" />
     <Compile Include="ItemPoSaveDto.cs" />
     <Compile Include="ItemPoSearchDto.cs" />
     <Compile Include="ItemTbDto.cs" />
