--- a/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
+++ b/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
@@ -79,11 +79,11 @@
     <Compile Include="frm_item_po.designer.cs">
       <DependentUpon>frm_item_po.cs</DependentUpon>
     </Compile>
-    <Compile Include="frm_item_wb.cs">
+    <Compile Include="frm_waybill_details.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frm_item_wb.Designer.cs">
-      <DependentUpon>frm_item_wb.cs</DependentUpon>
+    <Compile Include="frm_waybill_details.Designer.cs">
+      <DependentUpon>frm_waybill_details.cs</DependentUpon>
     </Compile>
     <Compile Include="frm_kit_dp.cs">
       <SubType>Form</SubType>
@@ -134,8 +134,8 @@
     <EmbeddedResource Include="frm_item_po.resx">
       <DependentUpon>frm_item_po.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frm_item_wb.resx">
-      <DependentUpon>frm_item_wb.cs</DependentUpon>
+    <EmbeddedResource Include="frm_waybill_details.resx">
+      <DependentUpon>frm_waybill_details.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_kit_dp.resx">
       <DependentUpon>frm_kit_dp.cs</DependentUpon>
