--- a/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
+++ b/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
@@ -132,6 +132,7 @@
     <Compile Include="PurchaseOrder.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Waybill.cs" />
+    <Compile Include="WbDetailsDto.cs" />
     <Compile Include="WbSaveDto.cs" />
     <EmbeddedResource Include="frm_health_center.resx">
       <DependentUpon>frm_health_center.cs</DependentUpon>
