--- a/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
+++ b/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
@@ -79,6 +79,12 @@
     <Compile Include="frm_item_po.designer.cs">
       <DependentUpon>frm_item_po.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_kit_details.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_kit_details.Designer.cs">
+      <DependentUpon>frm_kit_details.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_waybill.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +125,7 @@
     <Compile Include="ItemPoSearchDto.cs" />
     <Compile Include="ItemTbDto.cs" />
     <Compile Include="Kit.cs" />
+    <Compile Include="KitDetails.cs" />
     <Compile Include="KitDp.cs" />
     <Compile Include="KitDpSaveDto.cs" />
     <Compile Include="KitPo.cs" />
@@ -126,6 +133,7 @@
     <Compile Include="KitPoSaveDto.cs" />
     <Compile Include="KitPoSearchDto.cs" />
     <Compile Include="Msg.cs" />
+    <Compile Include="NameDto.cs" />
     <Compile Include="PoCombo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -143,6 +151,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_item_po.resx">
       <DependentUpon>frm_item_po.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_kit_details.resx">
+      <DependentUpon>frm_kit_details.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_waybill.resx">
       <DependentUpon>frm_waybill.cs</DependentUpon>
