--- a/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
+++ b/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
@@ -127,6 +127,12 @@
     <Compile Include="frm_parent.designer.cs">
       <DependentUpon>frm_parent.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_worker.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_worker.Designer.cs">
+      <DependentUpon>frm_worker.cs</DependentUpon>
+    </Compile>
     <Compile Include="HealthCenter.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemDp.cs" />
@@ -157,6 +163,8 @@
     <Compile Include="WbDetailsDto.cs" />
     <Compile Include="WbDetailsSaveDto.cs" />
     <Compile Include="WbSaveDto.cs" />
+    <Compile Include="Worker.cs" />
+    <Compile Include="WorkerSaveDto.cs" />
     <EmbeddedResource Include="frm_distribution_plan.resx">
       <DependentUpon>frm_distribution_plan.cs</DependentUpon>
     </EmbeddedResource>
@@ -186,6 +194,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_parent.resx">
       <DependentUpon>frm_parent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_worker.resx">
+      <DependentUpon>frm_worker.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
