--- a/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
+++ b/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
@@ -81,6 +81,12 @@
     <Compile Include="frm_health_center.designer.cs">
       <DependentUpon>frm_health_center.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_item_disposal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_item_disposal.Designer.cs">
+      <DependentUpon>frm_item_disposal.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_item_dp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -182,6 +188,9 @@
     <EmbeddedResource Include="frm_health_center.resx">
       <DependentUpon>frm_health_center.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frm_item_disposal.resx">
+      <DependentUpon>frm_item_disposal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_item_dp.resx">
       <DependentUpon>frm_item_dp.cs</DependentUpon>
     </EmbeddedResource>
@@ -190,6 +199,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_kit_details.resx">
       <DependentUpon>frm_kit_details.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_kit_po.resx">
+      <DependentUpon>frm_kit_po.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_purchase_order.resx">
       <DependentUpon>frm_purchase_order.cs</DependentUpon>
