--- a/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
+++ b/WarehouseSystem/WarehouseSystem/WarehouseSystem.csproj
@@ -140,6 +140,12 @@
     <Compile Include="frm_purchase_order.Designer.cs">
       <DependentUpon>frm_purchase_order.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_user.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_user.Designer.cs">
+      <DependentUpon>frm_user.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_waybill.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -205,7 +211,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseOrder.cs" />
+    <Compile Include="Role.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="UserSaveDto.cs" />
     <Compile Include="Waybill.cs" />
     <Compile Include="WbDetailsDto.cs" />
     <Compile Include="WbDetailsSaveDto.cs" />
@@ -250,6 +258,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_purchase_order.resx">
       <DependentUpon>frm_purchase_order.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_user.resx">
+      <DependentUpon>frm_user.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_waybill.resx">
       <DependentUpon>frm_waybill.cs</DependentUpon>
