item po details app done

--- a/warehouseapp/app/src/main/AndroidManifest.xml
+++ b/warehouseapp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.warehouse">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
@@ -13,7 +14,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Warehouse">
+        android:theme="@style/Theme.Warehouse"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ItemPoDetails"
+            android:exported="true" />
         <activity
             android:name=".MainMenu"
             android:exported="true" />
@@ -30,7 +35,7 @@
             android:name=".CaptureAct"
             android:screenOrientation="fullSensor"
             android:stateNotNeeded="true"
-            android:windowSoftInputMode="stateAlwaysHidden"></activity>
+            android:windowSoftInputMode="stateAlwaysHidden" />
     </application>
 
 </manifest>
