--- a/warehouseapp/app/build.gradle
+++ b/warehouseapp/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 }
